force-app/main/default/objects/ilms__Speciality_Book__c/ilms__Speciality_Book__c.object-meta.xml
<CustomObject>
    <label>Speciality Book (Deprecated)</label>
    <nameField>
        <displayFormat>SB{00000}</displayFormat>
        <label>Speciality Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speciality Books (Deprecated)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>