force-app/main/default/objects/ilms__Speciality_Book__c/fields/ilms__Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Book</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipName>Speciality_Books_Book</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>