force-app/main/default/objects/ilms__Speciality_Book__c/fields/ilms__Course_Type__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Type__c</fullName>
    <formula>ilms__Book__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>