force-app/main/default/objects/ilms__Speciality_Book__c/fields/ilms__Order__c.field-meta.xml
<CustomField>
    <fullName>ilms__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Speciality Book Order</description>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>