force-app/main/default/objects/ilms__Speciality_Book__c/fields/ilms__Speciality__c.field-meta.xml
<CustomField>
    <fullName>ilms__Speciality__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Speciality</label>
    <referenceTo>ilms__Speciality__c</referenceTo>
    <relationshipName>Speciality_Books_Speciality</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>